--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="icon.jpg" rel="shortcut icon" type="image/x-icon">
-    <title>Trexer Playlist</title>
+    <title>Eroom 영어 본문</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
@@ -251,7 +251,7 @@
             </div>
             <!-- // music__top -->
             <div class="music__img">
-                <img src="images/img-1.jpg" alt="이미지1">
+                <img src="icon.jpg" alt="이미지1">
             </div>
             <!-- // music__img -->
             <div class="music__song">
@@ -271,12 +271,12 @@
             <!-- // music__progress -->
             <div class="music__control">
                 <i id="control-repeat" class="material-icons" title="전체 반복" style="cursor: pointer;">repeat</i>
-                <i id="control-prev" class="material-icons" title="이전곡" style="cursor: pointer;">skip_previous</i>
+                <i id="control-prev" class="material-icons" title="이전 " style="cursor: pointer;">skip_previous</i>
                 <div class="play-pause">
                     <i id="control-play" class="material-icons" title="재생" style="cursor: pointer;">play_arrow</i>
                     <!-- <i class="material-icons">pause</i> -->
                 </div>
-                <i id="control-next" class="material-icons" title="다음곡" style="cursor: pointer;">skip_next</i>
+                <i id="control-next" class="material-icons" title="다음 본문" style="cursor: pointer;">skip_next</i>
                 <i id="control-list" class="material-icons" title="재생목록" style="cursor: pointer;">queue_music</i>
                 <!-- <i class="material-icons">repeat_one</i>
                 <i class="material-icons">shuffle</i> -->
